<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="200dip"
    android:minHeight="100dip"
    android:layout_height="wrap_content">
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/playerName"
            android:typeface="serif"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="0dip"
	        android:layout_weight="5"
	        android:layout_height="wrap_content">
	        <CheckBox android:id="@+id/checkbox_catcher"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/catcherPosHeading" />
		    <CheckBox android:id="@+id/checkbox_firstBase"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/firstBasePosHeading" />
		    <CheckBox android:id="@+id/checkbox_secondBase"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/secondBasePosHeading" />
	    </LinearLayout>
	    <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="0dip"
	        android:layout_weight="5"
	        android:layout_height="wrap_content">
		    <CheckBox android:id="@+id/checkbox_shortstop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/SSPosHeading" />
	        <CheckBox android:id="@+id/checkbox_thirdBase"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/thirdBasePosHeading" />
		    <CheckBox android:id="@+id/checkbox_outfield"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/OFPosHeading" />
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>